crates/escalier/tests/errors/invalid_index.esc
let tuple = [5, "hello", true]
tuple["2"]

// declare let array: string[]
// array["2"]
